Revision history for Dist-Zilla-PluginBundle-Author-SKIRMESS

{{$NEXT}}

        - Improved abstract

0.002  2017-08-18 23:45:16 UTC

        - Added CheckIssues plugin
        - Added CheckSelfDependency plugin
        - Added CheckStrictVersion plugin
        - Added Git::CheckFor::MergeConflicts plugin
        - Added Git::Remote::Check plugin
        - Added InstallGuide plugin and therefore an INSTALL file
        - Added MetaConfig plugin
        - Added UpdateGitHub plugin
        - Added VerifyPhases plugin
        - Added copyright_holder to dist.ini
        - Fixed a display issue in the POD
        - Plugins without arguments can be mentioned as scalar to add_plugins()
        - Removed FakeRelease plugin

0.001  2017-08-17 21:01:13 UTC

        - Initial release