@@ -1,5 +1,5 @@
 ---
-abstract: 'Dist::Zilla::PluginBundle::Author::SKIRMESS - Dist::Zilla configuration the way SKIRMESS does it'
+abstract: 'Dist::Zilla configuration the way SKIRMESS does it'
 author:
   - 'Sven Kirmess <sven.kirmess@kzone.ch>'
 build_requires:
@@ -52,6 +52,31 @@ x_Dist_Zilla:
           try_built_method: mtime
       name: Bootstrap::lib
       version: '1.001002'
+    -
+      class: Dist::Zilla::Plugin::PromptIfStale
+      config:
+        Dist::Zilla::Plugin::PromptIfStale:
+          check_all_plugins: 0
+          check_all_prereqs: 0
+          modules:
+            - Dist::Zilla::PluginBundle::Author::SKIRMESS
+          phase: build
+          run_under_travis: 0
+          skip: []
+      name: '@Author::SKIRMESS/stale modules, build'
+      version: '0.053'
+    -
+      class: Dist::Zilla::Plugin::PromptIfStale
+      config:
+        Dist::Zilla::Plugin::PromptIfStale:
+          check_all_plugins: 1
+          check_all_prereqs: 1
+          modules: []
+          phase: release
+          run_under_travis: 0
+          skip: []
+      name: '@Author::SKIRMESS/stale modules, release'
+      version: '0.053'
     -
       class: Dist::Zilla::Plugin::Git::Contributors
       config:
