@@ -55,6 +55,7 @@ on 'develop' => sub {
   requires "Dist::Zilla::Plugin::MinimumPerl" => "1.006";
   requires "Dist::Zilla::Plugin::NextRelease" => "0";
   requires "Dist::Zilla::Plugin::Prereqs::AuthorDeps" => "0";
+  requires "Dist::Zilla::Plugin::PromptIfStale" => "0";
   requires "Dist::Zilla::Plugin::ReadmeAnyFromPod" => "0";
   requires "Dist::Zilla::Plugin::ReversionOnRelease" => "0";
   requires "Dist::Zilla::Plugin::RunExtraTests" => "0";
