@@ -18,6 +18,25 @@ sub configure {
 
     $self->add_plugins(
 
+        # Check at build/release time if modules are out of date
+        [
+            'PromptIfStale', 'stale modules, build',
+            {
+                phase  => 'build',
+                module => [ $self->meta->name ],
+            }
+        ],
+
+        # Check at build/release time if modules are out of date
+        [
+            'PromptIfStale', 'stale modules, release',
+            {
+                phase             => 'release',
+                check_all_plugins => 1,
+                check_all_prereqs => 1,
+            }
+        ],
+
         # Add contributor names from git to your distribution
         'Git::Contributors',
 
